src/objects/Community_Setup_Id__mdt.object
<CustomObject>
    <fields>
        <fullName>Guest_Event_Account_Id__c</fullName>
        <description>Account Id used for Guest that register for Events</description>
        <label>Guest Event Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Id__c</fullName>
        <label>Network Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Registration_Account_Id__c</fullName>
        <description>Account Id used during the self-registration process in the community</description>
        <label>Self Registration Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Registration_Profile_Id__c</fullName>
        <label>Self Registration Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Registration_Social_Profile_Id__c</fullName>
        <label>Self Registration Social Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Community Setup Id</label>
    <pluralLabel>Community Setup Ids</pluralLabel>
</CustomObject>